--- a/mobile.css
+++ b/mobile.css
@@ -196,8 +196,8 @@ ul.content-text a:hover {
 }
 
 .displayed_image {
-   max-width: 100%;
-   max-height: 100%;
+   max-width: 100vw;
+   max-height: 100vh;
    margin: auto;
    display: block;
    position: relative;
